--- a/wiki/EnvironmentsDesc.wiki
+++ b/wiki/EnvironmentsDesc.wiki
@@ -7,21 +7,21 @@ The wiki's goal is to provide detailed description for all environments.
 
 = Development Environment =
 
-	* [http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html JDK 7u10 / JRE 7u10 (x64)]
+	* [http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html JDK/JRE 6u38 (x64)]
 	* [http://maven.apache.org/download.cgi Apache Maven 3.0.4]
 	* [http://tomcat.apache.org/download-70.cgi Apache Tomcat 7.0.34.0]
 	* [http://axis.apache.org/axis2/java/core/ Apache Axis2/Java 1.6.2]
+	* [http://www.apache.org/dyn/closer.cgi/juddi/3_1_3/ Apache jUDDI v3.1.3]
 	* [http://dev.mysql.com/downloads/mysql/ MySQL Community Server 5.5.29]
 	* [http://dev.mysql.com/downloads/connector/j/ MySQL Connector/J 5.1.22]
 	* [http://dev.mysql.com/downloads/workbench/ MySQL Workbench 5.2.45 CE]
 	* [http://squirrel-sql.sourceforge.net/ SQuirrel SQL Client 3.4.0]
 	* [http://www.soapui.org/ soapUI 4.5.1]
-	* [http://axis.apache.org/axis2/java/core/download.cgi Axis2 1.6.2]	
 
 == Eclipse ==	
 	* [http://www.eclipse.org/downloads/ Eclipse Juno (4.2) SR1]
 	* Maven Integration for Eclipse _by Eclipse.org EPL, version: 1.2.0.20120903-1050_
-	* Dali Java Persistence Tools - JPA Diagream Editor _by Eclipse.org EPL, version: 1.1.1.v201208222210_
+	* Dali Java Persistence Tools - JPA Diagram Editor _by Eclipse.org EPL, version: 1.1.1.v201208222210_
 
 = Production Environment =
 
